# oarepo-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml  push.yaml
oarepo_tools/: make_translations.py
oarepo_tools/babel/: __init__.py
oarepo_tools/i18next/: __init__.py  i18next-scanner.config.js  package-lock.json  package.json  translations.pot
oarepo_tools/i18next/scripts/: compileCatalog.js  compileLanguages.sh  generatePOT.sh
scripts/: format.sh
tests/: conftest.py  docker-compose.yml  oarepo.yaml  setup.cfg  test_babel.py  test_cli.py  test_i18next.py
tests/mock_module/: __init__.py
tests/mock_module/templates/: Component.jinja  page.html
tests/mock_module/theme/assets/: webpack.py
tests/mock_module/theme/assets/semantic-ui/js/: index.js
tests/test_i18next_translations/cs/: translations.json
