[project]
name = "oarepo-tools"
version = "0.2.5"
description = "OARepo tools"
readme = "README.md"
authors = [{ name = "Miroslav Simek", email = "miroslav.simek@cesnet.cz" }]
dependencies = ["click", "polib", "jinja2", "babel", "PyYAML", "jinjax"]

[project.scripts]
make-translations = "oarepo_tools.make_translations:main"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[project.optional-dependencies]
dev = [
    "black",
    "autoflake",
    "isort",
    "ruff",
    "licenseheaders",
    "mypy",
]
tests = [
    "pytest>=7.1.2",
    "pytest-docker",
    "pytest>=7.1.2",
    "oarepo-runtime>=1.4.44",
    "pytest-mock",
    "pytest-invenio",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.pytest]
testpaths = ['tests']
